<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>application</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>backend</module>
    </modules>
    <properties>
        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
        <assertj-core.version>3.27.7</assertj-core.version>
        <compiler-plugin.version>3.8.1</compiler-plugin.version>
        <java.version>21</java.version>
        <json-unit-assertj.version>3.5.0</json-unit-assertj.version>
        <!-- automatically run annotation processors within the incremental compilation (Eclipse only) -->
        <m2e.apt.activation>jdt_apt</m2e.apt.activation>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <maven-compiler-plugin.release>21</maven-compiler-plugin.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.32.3</quarkus.platform.version>
        <querydsl.version>5.1.0</querydsl.version>
        <json.version>20251224</json.version>
        <openapi.generator.version>2.8.1</openapi.generator.version>
        <!-- Run integration tests by default -->
        <skipITs>false</skipITs>
        <surefire-plugin.version>3.5.5</surefire-plugin.version>
        <wiremock.version>3.13.2</wiremock.version>
    </properties>
</project>
